force-app/main/default/objects/I__c/I__c.object-meta.xml
<CustomObject>
    <description>Object created for the Install report and record creation; R-23769</description>
    <label>Install</label>
    <nameField>
        <displayFormat>Install-{000000}</displayFormat>
        <label>Install Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Installs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>