force-app/main/default/objects/I__c/fields/A__c.field-meta.xml
<CustomField>
    <fullName>A__c</fullName>
    <label>A</label>
    <length>100</length>
    <type>Text</type>
</CustomField>