force-app/main/default/objects/I__c/fields/AD__c.field-meta.xml
<CustomField>
    <fullName>AD__c</fullName>
    <label>Actual Start Date</label>
    <type>DateTime</type>
</CustomField>