force-app/main/default/objects/I__c/fields/AE__c.field-meta.xml
<CustomField>
    <fullName>AE__c</fullName>
    <label>Actual End Date</label>
    <type>DateTime</type>
</CustomField>