force-app/main/default/objects/I__c/fields/AIS__c.field-meta.xml
<CustomField>
    <fullName>AIS__c</fullName>
    <label>Adapter_Int-GSP/Seal</label>
    <length>100</length>
    <type>Text</type>
</CustomField>