force-app/main/default/objects/I__c/fields/AL__c.field-meta.xml
<CustomField>
    <fullName>AL__c</fullName>
    <label>Anode Length</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>