force-app/main/default/objects/I__c/fields/AMPS_Settle_A_B__c.field-meta.xml
<CustomField>
    <fullName>AMPS_Settle_A_B__c</fullName>
    <label>AMPS Settle A-B</label>
    <length>100</length>
    <type>Text</type>
</CustomField>