force-app/main/default/objects/I__c/fields/AMPS_Start_Up_B_C__c.field-meta.xml
<CustomField>
    <fullName>AMPS_Start_Up_B_C__c</fullName>
    <label>AMPS Start-Up B-C</label>
    <length>100</length>
    <type>Text</type>
</CustomField>