force-app/main/default/objects/I__c/fields/AP3__c.field-meta.xml
<CustomField>
    <fullName>AP3__c</fullName>
    <label>Adapter MTR Part #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>