force-app/main/default/objects/I__c/fields/AP6__c.field-meta.xml
<CustomField>
    <fullName>AP6__c</fullName>
    <label>Anode Part #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>