force-app/main/default/objects/I__c/fields/API_or_Regional_Identifier__c.field-meta.xml
<CustomField>
    <fullName>API_or_Regional_Identifier__c</fullName>
    <label>API# or Regional Identifier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>