force-app/main/default/objects/I__c/fields/Ar2__c.field-meta.xml
<CustomField>
    <fullName>Ar2__c</fullName>
    <label>Cable Serial2 Armor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Galv</fullName>
            </value>
            <value>
                <fullName>3SS</fullName>
            </value>
            <value>
                <fullName>Monel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>