force-app/main/default/objects/I__c/fields/AS__c.field-meta.xml
<CustomField>
    <fullName>AS__c</fullName>
    <label>Adapter_Seal/MTR</label>
    <length>100</length>
    <type>Text</type>
</CustomField>