force-app/main/default/objects/I__c/fields/AVG_SG__c.field-meta.xml
<CustomField>
    <fullName>AVG_SG__c</fullName>
    <label>AVG SG</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>