force-app/main/default/objects/I__c/fields/AVT__c.field-meta.xml
<CustomField>
    <fullName>AVT__c</fullName>
    <label>Avg JT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>