force-app/main/default/objects/I__c/fields/BBL_MIN__c.field-meta.xml
<CustomField>
    <fullName>BBL_MIN__c</fullName>
    <label>BBL/MIN</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>