force-app/main/default/objects/I__c/fields/BBLS_To_Fill_Tubing__c.field-meta.xml
<CustomField>
    <fullName>BBLS_To_Fill_Tubing__c</fullName>
    <label>BBLS To Fill Tubing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>