force-app/main/default/objects/I__c/fields/BC__c.field-meta.xml
<CustomField>
    <fullName>BC__c</fullName>
    <label># Bands - MLC</label>
    <length>100</length>
    <type>Text</type>
</CustomField>