force-app/main/default/objects/I__c/fields/BHP_STG_60Hz_1__c.field-meta.xml
<CustomField>
    <fullName>BHP_STG_60Hz_1__c</fullName>
    <label>BHP/STG (60Hz)*1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>