force-app/main/default/objects/I__c/fields/BJ__c.field-meta.xml
<CustomField>
    <fullName>BJ__c</fullName>
    <label># Bands Per Joint</label>
    <length>100</length>
    <type>Text</type>
</CustomField>