force-app/main/default/objects/I__c/fields/BP__c.field-meta.xml
<CustomField>
    <fullName>BP__c</fullName>
    <label>Break Plug</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monel</fullName>
            </value>
            <value>
                <fullName>Brass</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>