force-app/main/default/objects/I__c/fields/BS__c.field-meta.xml
<CustomField>
    <fullName>BS__c</fullName>
    <label>BOH / Size</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2.375&quot;</fullName>
            </value>
            <value>
                <fullName>2.875&quot;</fullName>
            </value>
            <value>
                <fullName>3.5&quot;</fullName>
            </value>
            <value>
                <fullName>4.5&quot;</fullName>
            </value>
            <value>
                <fullName>5.5&quot;</fullName>
            </value>
            <value>
                <fullName>7.0&quot;</fullName>
            </value>
            <value>
                <fullName>8.625&quot;</fullName>
            </value>
            <value>
                <fullName>9.625&quot;</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>