force-app/main/default/objects/I__c/fields/BT__c.field-meta.xml
<CustomField>
    <fullName>BT__c</fullName>
    <label># Bands - Tubing</label>
    <length>100</length>
    <type>Text</type>
</CustomField>