force-app/main/default/objects/I__c/fields/C2__c.field-meta.xml
<CustomField>
    <fullName>C2__c</fullName>
    <label>Cable Serial2 Size</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>#6</fullName>
            </value>
            <value>
                <fullName>#4</fullName>
            </value>
            <value>
                <fullName>#2</fullName>
            </value>
            <value>
                <fullName>#1</fullName>
            </value>
            <value>
                <fullName>1/O</fullName>
            </value>
            <value>
                <fullName>2/O</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>