force-app/main/default/objects/I__c/fields/C__c.field-meta.xml
<CustomField>
    <fullName>C__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MLC Serial #</label>
    <referenceTo>SVMXC__Installed_Product__c</referenceTo>
    <relationshipLabel>Install (MLC Serial #)</relationshipLabel>
    <relationshipName>InstallLCWM</relationshipName>
    <type>Lookup</type>
</CustomField>