force-app/main/default/objects/I__c/fields/CA__c.field-meta.xml
<CustomField>
    <fullName>CA__c</fullName>
    <label>Customer AFE Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>