force-app/main/default/objects/I__c/fields/Cable_MLC_A_B__c.field-meta.xml
<CustomField>
    <fullName>Cable_MLC_A_B__c</fullName>
    <label>Cable &amp; MLC A-B</label>
    <length>100</length>
    <type>Text</type>
</CustomField>