force-app/main/default/objects/I__c/fields/Cable_MLC_A_C__c.field-meta.xml
<CustomField>
    <fullName>Cable_MLC_A_C__c</fullName>
    <label>Cable &amp; MLC A-C</label>
    <length>100</length>
    <type>Text</type>
</CustomField>