force-app/main/default/objects/I__c/fields/Cable_MLC_A_GRND__c.field-meta.xml
<CustomField>
    <fullName>Cable_MLC_A_GRND__c</fullName>
    <label>Cable &amp; MLC A-GRND</label>
    <length>100</length>
    <type>Text</type>
</CustomField>