force-app/main/default/objects/I__c/fields/Cable_Motor_Bottom_B_C__c.field-meta.xml
<CustomField>
    <fullName>Cable_Motor_Bottom_B_C__c</fullName>
    <label>Cable &amp; Motor Bottom B-C</label>
    <length>100</length>
    <type>Text</type>
</CustomField>