force-app/main/default/objects/I__c/fields/Cable_Motor_Surface_A_B__c.field-meta.xml
<CustomField>
    <fullName>Cable_Motor_Surface_A_B__c</fullName>
    <label>Cable &amp; Motor Surface A-B</label>
    <length>100</length>
    <type>Text</type>
</CustomField>