force-app/main/default/objects/I__c/fields/Cable_Motor_Surface_B_GRND__c.field-meta.xml
<CustomField>
    <fullName>Cable_Motor_Surface_B_GRND__c</fullName>
    <label>Cable &amp; Motor Surface B-GRND</label>
    <length>100</length>
    <type>Text</type>
</CustomField>