force-app/main/default/objects/I__c/fields/Casing_Kill__c.field-meta.xml
<CustomField>
    <fullName>Casing_Kill__c</fullName>
    <label>Casing Kill</label>
    <length>100</length>
    <type>Text</type>
</CustomField>