force-app/main/default/objects/I__c/fields/Casing_Pressure__c.field-meta.xml
<CustomField>
    <fullName>Casing_Pressure__c</fullName>
    <label>Casing Pressure</label>
    <length>100</length>
    <type>Text</type>
</CustomField>