force-app/main/default/objects/I__c/fields/Casing_Pressure_Unit__c.field-meta.xml
<CustomField>
    <fullName>Casing_Pressure_Unit__c</fullName>
    <label>Casing Pressure Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>atm</fullName>
            </value>
            <value>
                <fullName>bar</fullName>
            </value>
            <value>
                <fullName>kg/cm2</fullName>
            </value>
            <value>
                <fullName>kPa</fullName>
            </value>
            <value>
                <fullName>psia</fullName>
            </value>
            <value>
                <fullName>psig</fullName>
            </value>
            <value>
                <fullName>torr</fullName>
            </value>
            <value>
                <fullName>Mpa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>