force-app/main/default/objects/I__c/fields/CC__c.field-meta.xml
<CustomField>
    <fullName>CC__c</fullName>
    <label>Customer PayKey/Cost Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>