force-app/main/default/objects/I__c/fields/Ci__c.field-meta.xml
<CustomField>
    <fullName>Ci__c</fullName>
    <label>City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>