force-app/main/default/objects/I__c/fields/CL1__c.field-meta.xml
<CustomField>
    <fullName>CL1__c</fullName>
    <label>CL1/DIV1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>