force-app/main/default/objects/I__c/fields/CO__c.field-meta.xml
<CustomField>
    <fullName>CO__c</fullName>
    <label>County*</label>
    <length>100</length>
    <type>Text</type>
</CustomField>