force-app/main/default/objects/I__c/fields/Comparison_VSD_KVA_REQ_KVA__c.field-meta.xml
<CustomField>
    <fullName>Comparison_VSD_KVA_REQ_KVA__c</fullName>
    <label>Comparison (VSD KVA - REQ KVA)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>