force-app/main/default/objects/I__c/fields/Con__c.field-meta.xml
<CustomField>
    <fullName>Con__c</fullName>
    <label>Connection</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Wye</fullName>
            </value>
            <value>
                <fullName>Delta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>