force-app/main/default/objects/I__c/fields/Cont_Display__c.field-meta.xml
<CustomField>
    <fullName>Cont_Display__c</fullName>
    <label>Cont. Display #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>