force-app/main/default/objects/I__c/fields/Controller__c.field-meta.xml
<CustomField>
    <fullName>Controller__c</fullName>
    <label>Controller #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>