force-app/main/default/objects/I__c/fields/CP1__c.field-meta.xml
<CustomField>
    <fullName>CP1__c</fullName>
    <label>Cplg Part #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>