force-app/main/default/objects/I__c/fields/CP2__c.field-meta.xml
<CustomField>
    <fullName>CP2__c</fullName>
    <label>Adapter Cplg Part #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>