force-app/main/default/objects/I__c/fields/CP3__c.field-meta.xml
<CustomField>
    <fullName>CP3__c</fullName>
    <label>Adapter MTR Cplg Part #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>