force-app/main/default/objects/I__c/fields/CS1__c.field-meta.xml
<CustomField>
    <fullName>CS1__c</fullName>
    <label>Cable Serial #1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>