force-app/main/default/objects/I__c/fields/CS2__c.field-meta.xml
<CustomField>
    <fullName>CS2__c</fullName>
    <label>Cable Serial #2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>