force-app/main/default/objects/I__c/fields/Cs__c.field-meta.xml
<CustomField>
    <fullName>Cs__c</fullName>
    <label>Concerns</label>
    <length>100</length>
    <type>Text</type>
</CustomField>