force-app/main/default/objects/I__c/fields/CT1__c.field-meta.xml
<CustomField>
    <fullName>CT1__c</fullName>
    <label>Cap Line Tube Type/Size1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>