force-app/main/default/objects/I__c/fields/CT2__c.field-meta.xml
<CustomField>
    <fullName>CT2__c</fullName>
    <label>Cap Line Tube Type/Size2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>