force-app/main/default/objects/I__c/fields/CU__c.field-meta.xml
<CustomField>
    <fullName>CU__c</fullName>
    <label>Customer PO number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>