force-app/main/default/objects/I__c/fields/CV1__c.field-meta.xml
<CustomField>
    <fullName>CV1__c</fullName>
    <label>Check Valve1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>