force-app/main/default/objects/I__c/fields/CV2__c.field-meta.xml
<CustomField>
    <fullName>CV2__c</fullName>
    <label>Check Valve2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>