force-app/main/default/objects/I__c/fields/CVS__c.field-meta.xml
<CustomField>
    <fullName>CVS__c</fullName>
    <label>Check Valve / Size</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>2.375&quot;</fullName>
            </value>
            <value>
                <fullName>2.875&quot;</fullName>
            </value>
            <value>
                <fullName>3.5&quot;</fullName>
            </value>
            <value>
                <fullName>4.5&quot;</fullName>
            </value>
            <value>
                <fullName>5.5&quot;</fullName>
            </value>
            <value>
                <fullName>7.0&quot;</fullName>
            </value>
            <value>
                <fullName>8.625&quot;</fullName>
            </value>
            <value>
                <fullName>9.625&quot;</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>