force-app/main/default/objects/I__c/fields/D10__c.field-meta.xml
<CustomField>
    <fullName>D10__c</fullName>
    <label>Mandrel Type / Desc</label>
    <length>100</length>
    <type>Text</type>
</CustomField>