force-app/main/default/objects/I__c/fields/D11__c.field-meta.xml
<CustomField>
    <fullName>D11__c</fullName>
    <label>Wellhead Type / Desc</label>
    <length>100</length>
    <type>Text</type>
</CustomField>