force-app/main/default/objects/I__c/fields/D2__c.field-meta.xml
<CustomField>
    <fullName>D2__c</fullName>
    <label>Drain Set Depth</label>
    <length>100</length>
    <type>Text</type>
</CustomField>