force-app/main/default/objects/I__c/fields/DC__c.field-meta.xml
<CustomField>
    <fullName>DC__c</fullName>
    <label>Current Install: Date Completed</label>
    <type>Date</type>
</CustomField>