force-app/main/default/objects/I__c/fields/DI__c.field-meta.xml
<CustomField>
    <fullName>DI__c</fullName>
    <label>Days Between Pull &amp; Re-Install</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>