force-app/main/default/objects/I__c/fields/Distance_From_VSD_SWB__c.field-meta.xml
<CustomField>
    <fullName>Distance_From_VSD_SWB__c</fullName>
    <label>Distance From VSD/SWB</label>
    <length>100</length>
    <type>Text</type>
</CustomField>