force-app/main/default/objects/I__c/fields/DL2__c.field-meta.xml
<CustomField>
    <fullName>DL2__c</fullName>
    <label>Drain Length</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>