force-app/main/default/objects/I__c/fields/DL__c.field-meta.xml
<CustomField>
    <fullName>DL__c</fullName>
    <label>Desander Length</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>