force-app/main/default/objects/I__c/fields/DNof__c.field-meta.xml
<CustomField>
    <fullName>DNof__c</fullName>
    <label>Delays (Number of)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>