force-app/main/default/objects/I__c/fields/DS__c.field-meta.xml
<CustomField>
    <fullName>DS__c</fullName>
    <label>Current Install: Date Started</label>
    <type>Date</type>
</CustomField>