force-app/main/default/objects/I__c/fields/Dt1__c.field-meta.xml
<CustomField>
    <fullName>Dt1__c</fullName>
    <label>Details1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>