force-app/main/default/objects/I__c/fields/Dt2__c.field-meta.xml
<CustomField>
    <fullName>Dt2__c</fullName>
    <label>Details2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>