force-app/main/default/objects/I__c/fields/DW__c.field-meta.xml
<CustomField>
    <fullName>DW__c</fullName>
    <label>Distance To Next Wellhead</label>
    <length>100</length>
    <type>Text</type>
</CustomField>