force-app/main/default/objects/I__c/fields/EL__c.field-meta.xml
<CustomField>
    <fullName>EL__c</fullName>
    <label>Equipment Length</label>
    <length>100</length>
    <type>Text</type>
</CustomField>