force-app/main/default/objects/I__c/fields/Equipment_Assembly_Time__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Assembly_Time__c</fullName>
    <label>Equipment Assembly Time</label>
    <length>100</length>
    <type>Text</type>
</CustomField>