force-app/main/default/objects/I__c/fields/F3__c.field-meta.xml
<CustomField>
    <fullName>F3__c</fullName>
    <label>Cable Serial1 MFG</label>
    <length>100</length>
    <type>Text</type>
</CustomField>